Fix submit and reset button size on small screens

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -943,6 +943,16 @@ h1 {
         margin: auto auto 20px auto;
     }
 
+    .reset {
+        width: auto;
+        height: auto;
+    }
+
+    .submit {
+        width: auto;
+        height: auto;
+    }
+
     .contact-map {
         width: 95%;
         margin: auto auto 20px auto;
@@ -968,4 +978,5 @@ h1 {
         width: 100%;
         margin: auto auto 20px auto;
     }
+
 }
